# configsync-lite

./: pyproject.toml
configsync_lite/: env.py
configsync_lite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: CONTRIBUTING.md
github-files/: README.md
github-files/configsync_lite/: __init__.py  core.py  validators.py
github-files/docs/: CONTRIBUTING.md
tests/: test_core.py
